--- a/angular.json
+++ b/angular.json
@@ -20,8 +20,7 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              "src/data"
+              "src/assets"
             ],
             "styles": [
               "src/styles.css"
@@ -51,18 +50,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Industriradhus:build"
+            "browserTarget": "industriradhus-webapp:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Industriradhus:build:production"
+              "browserTarget": "industriradhus-webapp:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Industriradhus:build"
+            "browserTarget": "industriradhus-webapp:build"
           }
         },
         "test": {
@@ -96,7 +95,7 @@
         }
       }
     },
-    "Industriradhus-e2e": {
+    "industriradhus-webapp-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -104,7 +103,7 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Industriradhus:serve"
+            "devServerTarget": "industriradhus-webapp:serve"
           }
         },
         "lint": {
